[project]
name = "autopilotenv"
version = "1.0.0"
description = "Autonomous driving OpenEnv environment"
authors = [{ name = "Tejas" }]
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
